--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ src="https://www.facebook.com/tr?id=1192431892503580&ev=PageView&noscript=1"
 				<div class="elementor-element elementor-element-10bf9ed8 elementor-widget elementor-widget-heading" data-id="10bf9ed8" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
 					<h2 class="elementor-heading-title elementor-size-default">CONTATO:<br><br>
-Telefone: (21) 9510-1326<br><br>
+Telefone: (68) 3300-5611<br><br>
 E-mail: dhinpori@hotmail.com</h2>				</div>
 				</div>
 				<div class="elementor-element elementor-element-13bd87ba elementor-widget elementor-widget-heading" data-id="13bd87ba" data-element_type="widget" data-widget_type="heading.default">
@@ -356,7 +356,7 @@ E-mail: dhinpori@hotmail.com</h2>				</div>
 				<div class="elementor-element elementor-element-4ab2337 elementor-mobile-align-center elementor-align-center elementor-widget elementor-widget-button" data-id="4ab2337" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 									<div class="elementor-button-wrapper">
-					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/12997021074?text=Ol%C3%A1">
+					<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/68933005611?text=Ol%C3%A1">
 						<span class="elementor-button-content-wrapper">
 									<span class="elementor-button-text">CONVERSAR AGORA</span>
 					</span>
@@ -385,7 +385,7 @@ Razão Social: Auto Funilaria e Pintura Dns LTDA <br> CNPJ: 59.168.778/0001-57 <
 📍 Endereço:
 Avenida B Nenzinha Santos I, 03 – Quadra Lote 3 – Ibirapuera
 Vitória da Conquista - BA, 45075-455 <br>
-📞 Telefone: (77) 98834-1046 (WhatsApp) <br>
+📞 Telefone: (68) 3300-5611 <br>
 ✉️ E-mail: <a href="mailto:suelydbrito@hotmail.com" style="font-size: 16px;color: white">dhinpori@hotmail.com</a></h2>				</div>
 				</div>
 				</div>
